--- a/options.conf
+++ b/options.conf
@@ -1,3 +1,9 @@
+[package]
+name = boto3
+url = https://pypi.debian.net/boto3/boto3-1.4.8.tar.gz
+archives = 
+giturl = https://github.com/boto/boto3.git
+
 [autospec]
 # build 32 bit libraries
 32bit = false
@@ -5,6 +11,8 @@
 allow_test_failures = false
 # unset %build ld_as_needed variable
 asneeded = false
+# this package is trusted enough to automatically update (used by other tools)
+autoupdate = false
 # extend flags with '-std=gnu++98
 broken_c++ = false
 # disable parallelization during build
