--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = boto3
-url = https://github.com/boto/boto3/archive/1.9.142/boto3-1.9.142.tar.gz
+url = https://github.com/boto/boto3/archive/1.9.143/boto3-1.9.143.tar.gz
 archives = 
 giturl = https://github.com/boto/boto3.git
 
@@ -52,7 +52,7 @@ use_avx512 = false
 # add clang flags
 use_clang = false
 # configure build for lto
-use_lto = false
+use_lto = true
 # require package verification for build
 verify_required = false
 
