--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = boto3
-url = https://github.com/boto/boto3/archive/1.9.223/boto3-1.9.223.tar.gz
+url = https://github.com/boto/boto3/archive/1.9.224/boto3-1.9.224.tar.gz
 archives = 
 giturl = https://github.com/boto/boto3.git
 
@@ -33,6 +33,8 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not generate debuginfo for this package
+nodebug = false
 # disable stripping binaries
 nostrip = false
 # optimize build for size over speed
