boto3: Autospec creation for update from version 1.9.240 to version 1.9.241
commit cc8e52e91f642fab94658329ee4c4f54214ce624
Author: aws-sdk-python-automation <github-aws-sdk-python-automation@amazon.com>
Date:   Wed Oct 2 18:36:17 2019 +0000

    Bumping version to 1.9.241

commit d6691e78bfbebd8482a864a1e8d2d9f24063f670
Author: aws-sdk-python-automation <github-aws-sdk-python-automation@amazon.com>
Date:   Wed Oct 2 18:36:17 2019 +0000

    Add changelog entries from botocore

--- a/options.conf
+++ b/options.conf
@@ -1,8 +1,9 @@
 [package]
 name = boto3
-url = https://github.com/boto/boto3/archive/1.9.240/boto3-1.9.240.tar.gz
+url = https://github.com/boto/boto3/archive/1.9.241/boto3-1.9.241.tar.gz
 archives = 
 giturl = https://github.com/boto/boto3.git
+domain = 
 
 [autospec]
 # build 32 bit libraries
@@ -17,7 +18,7 @@ autoupdate = true
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
-# this package is a library compatability package and only ships versioned library files
+# this package is a library compatibility package and only ships versioned library files
 compat = false
 # set conservative build flags
 conservative_flags = false
