[update to 1.12.15] Add changelog entries from botocore
aws-sdk-python-automation (2):
      Add changelog entries from botocore
      Bumping version to 1.12.15

swetashre (1):
      Stale bot update for new label name

--- a/options.conf
+++ b/options.conf
@@ -1,9 +1,10 @@
 [package]
 name = boto3
-url = https://github.com/boto/boto3/archive/1.12.14/boto3-1.12.14.tar.gz
+url = https://github.com/boto/boto3/archive/1.12.15/boto3-1.12.15.tar.gz
 archives = 
 giturl = https://github.com/boto/boto3.git
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
