--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = boto3
-url = https://github.com/boto/boto3/archive/1.12.28/boto3-1.12.28.tar.gz
+url = https://github.com/boto/boto3/archive/1.12.30/boto3-1.12.30.tar.gz
 archives = 
 giturl = https://github.com/boto/boto3.git
 domain = 
@@ -39,6 +39,8 @@ no_autostart = false
 nodebug = false
 # disable stripping binaries
 nostrip = false
+# configure build also for openmpi
+openmpi = false
 # optimize build for size over speed
 optimize_size = false
 # set profile for pgo
