--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = boto3
-url = https://github.com/boto/boto3/archive/1.18.49/boto3-1.18.49.tar.gz
+url = https://github.com/boto/boto3/archive/1.18.50/boto3-1.18.50.tar.gz
 archives = 
 giturl = https://github.com/boto/boto3.git
 domain = 
@@ -47,6 +47,8 @@ optimize_size = false
 pgo = false
 # set flags for security-sensitive builds
 security_sensitive = false
+# package is only used by servers
+server = false
 # do not run test suite
 skip_tests = false
 # add .so files to the lib package instead of dev
