--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = boto3
-url = https://github.com/boto/boto3/archive/1.20.13/boto3-1.20.13.tar.gz
+url = https://github.com/boto/boto3/archive/refs/tags/1.20.14.tar.gz
 archives = 
 giturl = https://github.com/boto/boto3.git
 domain = 
