--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = boto3
-url = https://github.com/boto/boto3/archive/1.25.0/boto3-1.25.0.tar.gz
+url = https://github.com/boto/boto3/archive/1.25.1/boto3-1.25.1.tar.gz
 archives = 
 giturl = https://github.com/boto/boto3.git
 domain = 
@@ -35,6 +35,8 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not use the replacement pattern for file matching
+no_glob = false
 # do not generate debuginfo for this package
 nodebug = false
 # disable stripping binaries
