boto3: Autospec creation for update from version 1.26.98 to version 1.26.99
Jonas Neubert (1):
      update Github actions away from node12 compatible versions (#3638)

aws-sdk-python-automation (2):
      Add changelog entries from botocore
      Bumping version to 1.26.99

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = boto3
-url = https://github.com/boto/boto3/archive/1.26.98/boto3-1.26.98.tar.gz
+url = https://github.com/boto/boto3/archive/1.26.99/boto3-1.26.99.tar.gz
 archives = 
 giturl = https://github.com/boto/boto3.git
 domain = 
@@ -19,6 +19,8 @@ autoupdate = true
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
+# create vendor archive with cargo
+cargo_vendor = false
 # this package is a library compatibility package and only ships versioned library files
 compat = false
 # set conservative build flags
