--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = boto3
-url = https://github.com/boto/boto3/archive/1.34.12/boto3-1.34.12.tar.gz
+url = https://github.com/boto/boto3/archive/1.34.13/boto3-1.34.13.tar.gz
 archives = 
 giturl = https://github.com/boto/boto3.git
 domain = 
@@ -59,6 +59,8 @@ server = false
 skip_tests = false
 # add .so files to the lib package instead of dev
 so_to_lib = false
+# configure build for apx
+use_apx = true
 # configure build for avx2
 use_avx2 = true
 # configure build for avx512
