--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = boto3
-url = https://github.com/boto/boto3/archive/1.34.20/boto3-1.34.20.tar.gz
+url = https://github.com/boto/boto3/archive/1.34.21/boto3-1.34.21.tar.gz
 archives = 
 giturl = https://github.com/boto/boto3.git
 domain = 
@@ -9,6 +9,8 @@ alias =
 [autospec]
 # build 32 bit libraries
 32bit = false
+# allow windows executables (*.exe, *.dll) to be packaged
+allow_exe = false
 # allow package to build with test failures
 allow_test_failures = false
 # unset %build ld_as_needed variable
