--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = boto3
-url = https://github.com/boto/boto3/archive/1.34.115/boto3-1.34.115.tar.gz
+url = https://github.com/boto/boto3/archive/1.34.116/boto3-1.34.116.tar.gz
 archives = 
 giturl = https://github.com/boto/boto3.git
 domain = 
@@ -71,6 +71,8 @@ use_avx512 = false
 use_clang = false
 # configure build for lto
 use_lto = true
+# use ninja build files
+use_ninja = false
 # require package verification for build
 verify_required = false
 
