--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = boto3
-url = https://github.com/boto/boto3/archive/1.38.13/boto3-1.38.13.tar.gz
+url = https://github.com/boto/boto3/archive/1.38.14/boto3-1.38.14.tar.gz
 archives = 
 giturl = https://github.com/boto/boto3.git
 domain = 
@@ -37,6 +37,8 @@ fast-math = false
 full-debug-info = false
 # optimize build for speed over size
 funroll-loops = false
+# require license subpackage for successful build
+has_license = true
 # set flags to smallest -02 flags possible
 insecure_build = false
 # do not remove static libraries
